Changes for 1.3.10
   Make saving MD3 player head to use unanimated points and bounds
   Fix saving normals in MD3 player upper and head models
   Fix Texture Coordinates window being empty after closing it using title bar close button (Windows/macOS)
   Only create vertex in Edge Divide if selected vertexes share a common face edge
   Rename Materials|Clean Up Groups to Materials|Clean up
   Make subdivide command fail if no faces are selected
   Fix warning about unknown signal QTabWidget::selected when opening "Model|Background Image..."
   Fix rotating bone joint using properties panel in animation mode
   Fix zoom icons when compiled with newer Qt (worked on Qt 5.3 but not 5.10+)
      (use Qt 4+ resource system instead of embedding image in .ui files)
   Print stdout/stderr to Windows command prompt
   Create window as maximized if it fills the available screen space
   Load md3 player skins with upper case extension (.SKIN)
   Use Win32 API to support non-ASCII filenames
   RAW images are now loaded as little endian regardless of OS endianness
   Display result of Clean Up Groups in status bar
   Improve code integration of animation loop setting
   Fix building for Windows
   Add support for autotools out-of-tree build
   Add press F1 for help to OBJ export options window
   Add support for exporting Inter-Quake Export (IQE) models
   Fix new/rename material window titles
   Move animation Loop setting between FPS and Start/Stop buttons
   Don't sort opaque RGBA textures in 3D Alpha Blend view mode
   Add bone joint rotation to properties panel in non-animation mode
   Update plugin API usage for builtin features
   Fix crash when opening Paint Texture

Changes for 1.3.9
   Switch from Qt4 to Qt5
   Make animation loop a per-animation setting that is saved in .mm3d files (mm3d format is now 1.7)
   Allow user to set fixed grid
   Fix incorrect texture rending for materials that share GL textures
   Fix insertFrameAnimFrame when frame is not at end