@@ -1,4 +1,5 @@
 Changes for 1.3.10
+   Fix saving MD3 with 1 animation and 1 frame writing unanimated vertexes
    Make saving MD3 player head to use unanimated points and bounds
    Fix saving normals in MD3 player upper and head models
    Fix Texture Coordinates window being empty after closing it using title bar close button (Windows/macOS)
